--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.11.6",
+    "@syncfusion/ej2-angular-charts": "^20.2.50-ngcc",
+    "ng-circle-progress": "^1.6.0",
+    "ngx-countdown": "^14.0.0",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
