--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.11.6",
+    "@swimlane/ngx-charts": "^20.1.0",
     "@syncfusion/ej2-angular-charts": "^20.2.50-ngcc",
     "ng-circle-progress": "^1.6.0",
     "ngx-countdown": "^14.0.0",
@@ -35,6 +36,8 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@angular/localize": "^14.2.2",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
